cmake_minimum_required(VERSION 3.0.0)
project(AuthNetClient)

set(CMAKE_CXX_STANDARD 11)

set(SOURCES
    ../src/acrimpl.cpp
    ../src/acrimpl_c.cpp
    ../src/AddrPort.cpp
    ../src/AngleFollower.cpp
    ../src/AsyncWork.cpp
    ../src/atomic.cpp
    ../src/BufferSegment.cpp
    ../src/CoInit.cpp
    ../src/ConnectParam.cpp
    ../src/Crc.cpp
    ../src/CriticalSect.cpp
    ../src/CryptoAes.cpp
    ../src/CryptoFast.cpp
    ../src/CryptoRC4.cpp
    ../src/CryptoRsa.cpp
    ../src/CustomValueEventQueue.cpp
    ../src/DefaultStringEncoder.cpp
    ../src/DeviationDetector.cpp
    ../src/DumpClient.cpp
    ../src/DumpCommon.cpp
    ../src/EmergencyLogClient.cpp
    ../src/EmergencyLogCommon.cpp
    ../src/EmergencyLogData.cpp
    ../src/Enums.cpp
    ../src/Epoll_Reactor.cpp
    ../src/ErrorInfo.cpp
    ../src/Event.cpp
    ../src/Exception.cpp
    ../src/ExternalBufferArray.cpp
    ../src/FakeClrBase.cpp
    ../src/FakeCLRRandom.cpp
    ../src/FakeWinsock.cpp
    ../src/FastArray.cpp
    ../src/FastArrayImpl.cpp
    ../src/FastArrayPtr.cpp
    ../src/FastHeap.cpp
    ../src/FastHeapImpl.cpp
    ../src/FastHeapSettings.cpp
    ../src/FastSocket.cpp
    ../src/FilterTag.cpp
    ../src/FinalUserWorkItem.cpp
    ../src/GlobalTimerThread.cpp
    ../src/HeartbeatWork.cpp
    ../src/HlaCritSec.cpp
    ../src/HlaEntityImpl_C.cpp
    ../src/HlaField.cpp
    ../src/HlaSessionHostImpl_C.cpp
    ../src/IOCP.cpp
    ../src/IRmiHost.cpp
    ../src/IRMIProxy.cpp
    ../src/IRMIStub.cpp
    ../src/ISendDest_C.cpp
    ../src/Kqueue_Reactor.cpp
    ../src/LeanDynamicCast.cpp
    ../src/LeanType.cpp
    ../src/ListNode.cpp
    ../src/LogWriterImpl.cpp
    ../src/LookasideAllocator.cpp
    ../src/LookasideAllocatorImpl.cpp
    ../src/LoopbackHost.cpp
    ../src/Marshaler.cpp
    ../src/Message.cpp
    ../src/MilisecTimerImpl.cpp
    ../src/MiniDumper.cpp
    ../src/mmmilisectimer.cpp
    ../src/mmtime64.cpp
    ../src/NetClient.cpp
    ../src/NetClientConnect.cpp
    ../src/NetClientManager.cpp
    ../src/NetClientSend.cpp
    ../src/NetClientStats.cpp
    ../src/NetConfig.cpp
    ../src/NetCore.cpp
    ../src/NetCoreEvent.cpp
    ../src/NetCoreStats.cpp
    ../src/NetPeerInfo.cpp
    ../src/NetSettings.cpp
    ../src/NetUtil.cpp
    ../src/Networker_C.cpp
    ../src/NumUtil.cpp
    ../src/P2PGroup.cpp
    ../src/P2PGroup_C.cpp
    ../src/P2P_C.cpp
    ../src/PacketFrag.cpp
    ../src/pnguid.cpp
    ../src/PnIconv.cpp
    ../src/pnmutex.cpp
    ../src/PNPath.cpp
    ../src/PNS3ETimer.cpp
    ../src/PNString.cpp
    ../src/PnThread.cpp
    ../src/PnTime.cpp
    ../../../version/PNVersion.cpp
    ../src/Poll_Reactor.cpp
    ../src/PooledObjects.cpp
    ../src/PositionFollower.cpp
    ../src/Ptr.cpp
    ../src/PtrImpl.cpp
    ../src/qpcmilisectimer.cpp
    ../src/Quantizer.cpp
    ../src/Random.cpp
    ../src/ReliableUDP.cpp
    ../src/ReliableUDPConfig.cpp
    ../src/ReliableUDPFrame.cpp
    ../src/ReliableUdpHelper.cpp
    ../src/ReliableUDPHost.cpp
    ../src/RemoteBase.cpp
    ../src/RemotePeer.cpp
    ../src/RemotePeerRecycle_C.cpp
    ../src/RemoteServer.cpp
    ../src/ReportError.cpp
    ../src/RMIContext.cpp
    ../src/Semaphore.cpp
    ../src/SendBrake.cpp
    ../src/SendData.cpp
    ../src/SendMessage.cpp
    ../src/SendReadyList.cpp
    ../src/SingletonImpl.cpp
    ../src/Socket.cpp
    ../src/SocketToHostsMap.cpp
    ../src/SocketUtil.cpp
    ../src/stdafxclient.cpp
    ../src/stdafxcommon.cpp
    ../src/StreamQueue.cpp
    ../src/StringEncorder.cpp
    ../src/strpool.cpp
    ../src/SuperSocket.cpp
    ../src/SuperSocketProactor.cpp
    ../src/SuperSocketReactor.cpp
    ../src/SuperSocketSend.cpp
    ../src/SysTime.cpp
    ../src/sysutil.cpp
    ../src/TCPLayer.cpp
    ../src/TcpLayer_C.cpp
    ../src/ThreadPoolImpl.cpp
    ../src/ThreadUtil.cpp
    ../src/TimeAlarm.cpp
    ../src/TimeEventThreadPool.cpp
    ../src/TimeOfDayTimer.cpp
    ../src/TimerThread.cpp
    ../src/TimeUtil.cpp
    ../src/Tracer.cpp
    ../src/UdpSocket_C.cpp
    ../src/UnreliableMessageLossMeasurer.cpp
    ../src/Upnp.cpp
    ../src/URI.cpp
    ../src/UseCount.cpp
    ../src/UserTaskQueue.cpp
    ../src/UseZlib.cpp
    ../src/variant-marshaler.cpp
    ../src/VizAgent.cpp
    ../src/VizMessageSummary.cpp
)

set(HEADERS
    ../src/acrimpl.h
    ../src/acrimpl_c.h
    ../src/AsyncWork.h
    ../src/BufferSegment.h
    ../src/CachedTimes.h
    ../src/CollUtil.h
    ../src/Crc.h
    ../src/CriticalSectImpl.h
    ../src/CustomValueEventQueue.h
    ../src/DefaultStringEncoder.h
    ../src/DeviationDetector.h
    ../src/DumpClient.h
    ../src/EmergencyLogClient.h
    ../src/EmergencyLogCommon.h
    ../src/EmergencyLogData.h
    ../src/enumimpl.h
    ../src/Epoll_Reactor.h
    ../src/FakeWinsock.h
    ../src/FastArrayImpl.h
    ../src/FastArrayPtrImpl.h
    ../src/FastHeapImpl.h
    ../src/FastList2.h
    ../src/FastMap2.h
    ../src/FastSocket.h
    ../src/FilterTag.h
    ../src/FinalUserWorkItem.h
    ../src/FragHeader.h
    ../src/FreeList.h
    ../src/Functors.h
    ../src/GlobalTimerThread.h
    ../src/HeartbeatWork.h
    ../src/HlaCritSec.h
    ../src/HlaEntityImpl_C.h
    ../src/HlaSessionHostImpl_C.h
    ../src/IHostObject.h
    ../src/IntraTracer.h
    ../src/IOCP.h
    ../src/ioevent.h
    ../src/ISendDest_C.h
    ../src/Kqueue_Reactor.h
    ../src/LeanDynamicCast.h
    ../src/LeanType.h
    ../src/LicenseType.h
    ../src/LocalEvent.h
    ../src/LogWriterImpl.h
    ../src/LookasideAllocatorImpl.h
    ../src/LoopbackHost.h
    ../src/LowContextSwitchingLoop.h
    ../src/MilisecTimerImpl.h
    ../src/mmmilisectimer.h
    ../src/mmtime64.h
    ../src/NetClient.h
    ../src/NetClientManager.h
    ../src/NetCore.h
    ../src/NetSettings.h
    ../src/NetUtil.h
    ../src/Networker_C.h
    ../src/NumUtil.h
    ../src/P2PGroup_C.h
    ../src/PacketFrag.h
    ../src/PnIconv.h
    ../src/PNS3ETimer.h
    ../../../version/PNVersion.h
    ../src/Poll_Reactor.h
    ../src/PooledObjects.h
    ../src/PooledObjectAsLocalVar.h
    ../src/PtrImpl.h
    ../src/qpcmilisectimer.h
    ../src/quicksort.h
    ../src/Reactor.h
    ../src/Relayer.h
    ../src/ReliableUDP.h
    ../src/ReliableUDPConfig.h
    ../src/ReliableUDPFrame.h
    ../src/ReliableUdpHelper.h
    ../src/ReliableUDPHost.h
    ../src/RemoteBase.h
    ../src/RemotePeer.h
    ../src/RemoteServer.h
    ../src/ReportError.h
    ../src/ReusableLocalVar.h
    ../src/RmiContextImpl.h
    ../src/RunOnScopeOut.h
    ../src/SendBrake.h
    ../src/SendDestInfo.h
    ../src/SendFragRefs.h
    ../src/SendMessage.h
    ../src/SendOpt.h
    ../src/SendReadyList.h
    ../src/Socket.h
    ../src/SocketPtrAndSerial.h
    ../src/SocketUtil.h
    ../src/SpinLock.h
    ../src/STLUtil.h
    ../src/StreamQueue.h
    ../src/SuperSocket.h
    ../src/TCPLayer.h
    ../src/ThreadPoolImpl.h
    ../src/TimeAlarm.h
    ../src/TimeEventThreadPool.h
    ../src/TimeOfDayTimer.h
    ../src/UniqueID.h
    ../src/UnreliableMessageLossMeasurer.h
    ../src/Upnp.h
    ../src/URI.h
    ../src/UseCount.h
    ../src/UserTaskQueue.h
    ../src/UseZlib.h
    ../src/VizAgent.h
    ../src/VizMessageSummary.h
)

file(GLOB_RECURSE OPEN_SRCS_ICONV
    ../OpenSources/iconv-embed/*.h
    ../OpenSources/iconv-embed/*.c
)

file(GLOB_RECURSE OPEN_SRCS_LIBTOM_CRYPTO
    ../OpenSources/libtom/crypto/*.h
    ../OpenSources/libtom/crypto/*.c
)

file(GLOB_RECURSE OPEN_SRCS_LIBTOM_MATH
    ../OpenSources/libtom/math/*.h
    ../OpenSources/libtom/math/*.c
)

file(GLOB_RECURSE OPEN_SRCS_ZLIB
    ../OpenSources/zlib/*.h
    ../OpenSources/zlib/*.c
)

# compile
add_compile_options(
    -fPIC
    -W -Wall -Wextra
    -O2
    -std=c++11
)
add_definitions(
    -D__x86_64__
    -D__linux__
    -D_LINUX
    -D_LIB
    -D_NO_NTTNTRACE
    -DPROUD_STATIC_LIB
)

# link
add_library(${PROJECT_NAME} STATIC ${HEADERS} ${SOURCES} ${OPEN_SRCS_ICONV} ${OPEN_SRCS_LIBTOM_CRYPTO} ${OPEN_SRCS_LIBTOM_MATH} ${OPEN_SRCS_ZLIB})
target_link_libraries(${PROJECT_NAME}
    pthread
)
